# binario

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs
derive/: Cargo.toml
derive/src/: decode.rs  encode.rs  lib.rs
examples/: basic.rs  bench.rs  server-bincode.rs  server.rs
src/: decode.rs  decode_impls.rs  decode_utils.rs  encode.rs  encode_impls.rs  encode_utils.rs  lib.rs
