[package]
name = "binario"
description = "An asynchronous zero-fluff binary encoder/decoder"
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/binario"

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
binario-derive = { version = "0.0.2", path = "./derive" }
pin-project = "1.1.7"
tokio = { version = "1.42.0", default-features = false }

[dev-dependencies]
# Examples/Tests
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "net", "io-util"] }

# Benchmark
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
pprof = { version = "0.14.0", features = ["flamegraph", "criterion", "protobuf-codec", "frame-pointer"] }
bincode = "1.3.3"
tokio-bincode = "0.1.0"
tokio-util = { version = "0.7.13", features = ["codec"] }
bytes = "1.9.0"
futures = "0.3.31"

[workspace]
members = [
    "derive",
]
