[package]
name = "binario-derive"
description = "Macros for Binario, an asynchronous zero-fluff binary encoder/decoder"
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/binario"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.13", features = ["full"] }
