[package]
name = "binario-derive"
description = "Macros for Binario, an asynchronous zero-fluff binary encoder/decoder"
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/binario"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"
syn = { version = "2.0.92", features = ["full"] }
